swagger hecho
